# nutri-lab

./: README.md  pyproject.toml
pyprg/: settings.py  urls.py
pyprg/authentication/: apps.py  models.py  urls.py  utils.py  views.py
pyprg/authentication/migrations/: 0001_initial.py
pyprg/authentication/templates/: cadastro.html  login.html
pyprg/plataforma/: admin.py  apps.py  urls.py  views.py
pyprg/plataforma/migrations/: 0001_initial.py
pyprg/plataforma/templates/: dados_paciente.html  dados_paciente_listar.html  pacientes.html  plano_alimentar.html  plano_alimentar_listar.html
pyprg/templates/: base.html  base_plataforma.html
pyprg/templates/static/authentication/css/: cadastro.css
pyprg/templates/static/plataforma/css/: plano_alimentar.css
